[package]
name = "stable-swap-math"
version = "1.8.2"
description = "Calculations for the StableSwap invariant"
license = "Apache-2.0"
authors = ["michaelhly <michaelhly@gmail.com>"]
homepage = "https://saber.so"
repository = "https://github.com/saber-hq/stable-swap"
edition = "2021"
keywords = ["solana", "saber", "math"]

[dependencies]
borsh = "1.5"
num-traits = "0.2"
primitive-types = "0.13.1"
stable-swap-client = { path = "../stable-swap-client", version = "^1" }

[dev-dependencies]
proptest = "1.6.0"
rand = "0.9.0"
stable-swap-sim = { path = "./sim", version = "^0.1" }
